Fix grid layout and improve table styling for better structure and readability

--- a/style.css
+++ b/style.css
@@ -17,10 +17,9 @@ body {
 }
 
 
-
 .container {
     display: grid;
-    grid-template-columns: 1f 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
     justify-items: center;
     grid-template-areas:
         "header header"
@@ -36,7 +35,7 @@ body {
 }
 
 #Kalenderblatt table {
-    border-spacing: 0px;
+    border-spacing: px;
     border-collapse: collapse;
     font-size: 18px;
 
@@ -78,7 +77,7 @@ td {
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 
 }
 
@@ -120,9 +119,3 @@ td:nth-child(1) {
 h4 {
     margin-top: 10rem;
 }
-
-* {}
-
-border: red solid 1px;
-margin: 0;
-...........Flexbox zu markieren um zu bearbeiten
